@@ -10,6 +10,7 @@ git-annex (4.20131003) UNRELEASED; urgency=low
   * The control socket path passed to ssh needs to be 17 characters
     shorter than the maximum unix domain socket length, because ssh
     appends stuff to it to make a temporary filename. Closes: #725512
+  * status: Fix space leak in local mode, introduced in version 4.20130920.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 03 Oct 2013 15:41:24 -0400
 
